[package]
name = "bcrypt-performance-test"
version = "0.1.0"
authors = ["dkos <kosdejan@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bcrypt = "0.6.1"


